@@ -6831,4 +6831,22 @@
   <data name="database_go_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons\64px\database_go.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="bug_fixing_16" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons\16px\bug_fixing.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bug_fixing_20" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons\20px\bug_fixing.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bug_fixing_24" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons\24px\bug_fixing.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bug_fixing_32" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons\32px\bug_fixing.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bug_fixing_48" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons\48px\bug_fixing.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="bug_fixing_64" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\icons\64px\bug_fixing.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
