@@ -100,6 +100,7 @@ Application Changes:
 - Weapons now export the mounts they still have available for accessories and modifications as "availablemounts" and "availablemounts_english".
 - Added a handler for Cyberware that inherit their availabilty from a child item using the 'or Gear' suffix, preventing Restricted Gear from checking the sub-item twice. Specifically this supports the Chemical Gland bioware that has the drug selected at time of implantation, gaining the availability of the implanted bioware at that time. Implements #5174
 - Fixed SelectCyberware form not showing Availability correctly for items with 'Or Gear' Availability suffix.
+- Added a more obvious "Report a Bug" menu item that takes the user directly to the page to create a new GitHub issue (more obvious than using the Issues Tracker).
 
 Data Changes:
 - Corrected the categories (and therefore also mounts, concealabilities, and ranges) for the Krime AKM-SU97, the Krime Ditch, the Krime Stopper-II, the Krime Soldier, and the Krime Ripper as per forum errata found here: https://jackpoint.live/index.php?topic=31750.msg544923#msg544923.
@@ -306,6 +307,7 @@ Changed/New Strings:
 - String_SelectFolderForPDFScan
 - Message_ScanFoldersRecursively
 - String_Fallback_Pattern
+- Menu_Main_ReportBug
 
 Removed Strings:
 - Label_SelectMetamagic_Disadvantage
